--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@
 }
 
 .moderate {
-    background-color: yellow;
+    background-color: rgb(241, 241, 34);
     width: fit-content;
     color: white;
     padding:8px;
@@ -57,7 +57,7 @@
 }
 
 .severe {
-    background-color: red;
+    background-color: rgb(166, 29, 29);
     width: fit-content;
     color: white;
     padding:8px;
