--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,15 +65,23 @@
     border-radius:6px;
 }
 
-.datedd {
-    font-weight: bolder;
-}
-
 .col-2 {
     color: white;
     background-color: rgba(9, 110, 144, 0.782);
     margin:8px;
-    /* border-radius:20px; */
+    font-weight: bold;
+    text-align: center;
 
 }
+
+.col-8 {
+    margin-bottom: 50px;
+}
+
+.row {
+    margin-left:8px;
+    margin-top: 8px;
+}
+
+
 
